--- a/index.html
+++ b/index.html
@@ -53,13 +53,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Sobre</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#ferramentas">Ferramentas</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Participe</a>
+                    </li>
+                       <li>
+                        <a class="page-scroll" href="#contact">Contribua</a>
                     </li>
                 </ul>
             </div>
@@ -75,7 +78,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Brasil Livre</h1>
-                        <p class="intro-text">Lutando contra o trabalho escravo conteporaneo
+                        <p class="intro-text">Lutando contra o trabalho escravo contemporâneo 
                             <br>Created by Start Bootstrap.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -99,13 +102,15 @@
     </section>
 
     <!-- Download Section -->
-    <section id="download" class="content-section text-center">
+    <section id="ferramentas" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>Ferramentas</h2>
+                    <p>.....</p>
+                    <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg">Mapa do Trabalho Escravo</a>
+                    <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg">Bot de Auxílio</a>
+
                 </div>
             </div>
         </div>
@@ -115,25 +120,51 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Entre-em contato</h2>
+                <p>Sinta-se a vontade para entrar em contato. Estarei disposto em responder suas dúvidas.</p>
+                <p><a href="mailto:devmessias@gmail.com">devmessias@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://www.facebook.com/" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/BrasilLivre" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
+                    
                 </ul>
             </div>
         </div>
     </section>
-
+ <section id="contribua" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Contribua para o projeto!</h2>
+                <p>Sinta-se a vontade para entrar em contato. Estarei disposto em responder suas dúvidas.</p>
+                <p><a href="mailto:devmessias@gmail.com">devmessias@gmail.com</a>
+                </p>
+                <ul class="list-inline banner-social-buttons">
+                    <li>
+                        <a href="https://www.facebook.com/" class="btn btn-default btn-lg">
+                            <i class="fa fa-facebook fa-fw"></i> <span class="network-name">
+                                Design</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/" class="btn btn-default btn-lg">
+                            <i class="fa fa-facebook fa-fw"></i> <span class="network-name">
+                                Humanas</span></a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/BrasilLivre" class="btn btn-default btn-lg">
+                            <i class="fa fa-github fa-fw"></i> <span class="network-name">
+                                Sou um desenvolvedor!
+                                </span></a>
+                    </li>
+                    
+                </ul>
+            </div>
+        </div>
+    </section>
     <!-- Map Section -->
     <div id="map"></div>
 
