--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                         <a class="page-scroll" href="#ferramentas">Ferramentas</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Participe</a>
+                        <a class="page-scroll" href="#contact">Contato</a>
                     </li>
                        <li>
-                        <a class="page-scroll" href="#contact">Contribua</a>
+                        <a class="page-scroll" href="#contribua">Contribua</a>
                     </li>
                 </ul>
             </div>
@@ -140,7 +140,10 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contribua para o projeto!</h2>
-                <p>Sinta-se a vontade para entrar em contato. Estarei disposto em responder suas dúvidas.</p>
+                <p>Estamos a procura de pessoas interessadas em quebrar esse paradgma
+                <small> Independente de sua formação ou área de conhecimento. Buscamos designers, advogados, programadores ou
+                pessoas que saibam fazer café</small>
+                </p>
                 <p><a href="mailto:devmessias@gmail.com">devmessias@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
