--- a/index.html
+++ b/index.html
@@ -3,28 +3,28 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Brasil Livre</title>
+  <title>Brasil Livre</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <!-- Custom Fonts -->
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
-    <!-- Theme CSS -->
-    <link href="css/grayscale.min.css" rel="stylesheet">
+  <!-- Theme CSS -->
+  <link href="css/grayscale.min.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
@@ -33,165 +33,169 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    Menu <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Start</span> Bootstrap
-                </a>
-            </div>
+  <!-- Navigation -->
+  <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+          Menu <i class="fa fa-bars"></i>
+        </button>
+        <a class="navbar-brand page-scroll" href="#page-top">
+          <i class="fa fa-play-circle"></i> <span class="light">Brasil</span> Livre
+        </a>
+      </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-                <ul class="nav navbar-nav">
-                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">Sobre</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#ferramentas">Ferramentas</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contato</a>
-                    </li>
-                       <li>
-                        <a class="page-scroll" href="#contribua">Contribua</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+        <ul class="nav navbar-nav">
+          <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+          <li class="hidden">
+            <a href="#page-top"></a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#about">Sobre</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#ferramentas">Ferramentas</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#contact">Contato</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#contribua">Contribua</a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container -->
+  </nav>
 
-    <!-- Intro Header -->
-    <header class="intro">
-        <div class="intro-body">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Brasil Livre</h1>
-                        <p class="intro-text">Lutando contra o trabalho escravo contemporâneo 
-                            <br>Created by Start Bootstrap.</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+  <!-- Intro Header -->
+  <header class="intro">
+    <div class="intro-body">
+      <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-            </div>
+          <div class="col-md-8 col-md-offset-2">
+            <h1 class="brand-heading">Brasil Livre</h1>
+            <p class="intro-text">Lutando contra o trabalho escravo contemporâneo
+              <br>Comunidade de Software Livre UFU.</p>
+            <a href="#about" class="btn btn-circle page-scroll">
+              <i class="fa fa-angle-double-down animated"></i>
+            </a>
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
+  </header>
 
-    <!-- Download Section -->
-    <section id="ferramentas" class="content-section text-center">
-        <div class="download-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Ferramentas</h2>
-                    <p>.....</p>
-                    <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg">Mapa do Trabalho Escravo</a>
-                    <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg">Bot de Auxílio</a>
+  <!-- About Section -->
+  <section id="about" class="container content-section text-center">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h2>Sobre o Brasil Livre</h2>
+        <p>
+            <a href="http://trabalho.gov.br/fiscalizacao-combate-trabalho-escravo">
+                          Segundo o Ministério do Trabalho</a>.
+           Considera-se trabalho realizado em condição análoga à de escravo a que resulte das seguintes situações, quer em conjunto, quer isoladamente: a submissão de trabalhador a trabalhos forçados; a submissão de trabalhador a
+          jornada exaustiva; a sujeição de trabalhador a condições degradantes de trabalho; a restrição da locomoção do trabalhador, seja em razão de dívida contraída, seja por meio do cerceamento do uso de qualquer meio de transporte por parte do trabalhador,
+          ou por qualquer outro meio com o fim de retê-lo no local de trabalho; a vigilância ostensiva no local de trabalho por parte do empregador ou seu preposto, com o fim de retê-lo no local de trabalho; a posse de documentos ou objetos pessoais do
+          trabalhador, por parte do empregador ou seu preposto, com o fim de retê-lo no local de trabalho. Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on
 
-                </div>
-            </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Download Section -->
+  <section id="ferramentas" class="content-section text-center">
+    <div class="download-section">
+      <div class="container">
+        <div class="col-lg-8 col-lg-offset-2">
+          <h2>Ferramentas</h2>
+          <p>.....</p>
+          <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg">Mapa do Trabalho Escravo</a>
+          <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg">Bot de Auxílio</a>
+
         </div>
-    </section>
+      </div>
+    </div>
+  </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Entre-em contato</h2>
-                <p>Sinta-se a vontade para entrar em contato. Estarei disposto em responder suas dúvidas.</p>
-                <p><a href="mailto:devmessias@gmail.com">devmessias@gmail.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://www.facebook.com/" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/BrasilLivre" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    
-                </ul>
-            </div>
-        </div>
-    </section>
- <section id="contribua" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contribua para o projeto!</h2>
-                <p>Estamos a procura de pessoas interessadas em quebrar esse paradgma
-                <small> Independente de sua formação ou área de conhecimento. Buscamos designers, advogados, programadores ou
+  <!-- Contact Section -->
+  <section id="contact" class="container content-section text-center">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h2>Entre-em contato</h2>
+        <p>Estou disposto em responder suas perguntas</p>
+        <p><a href="mailto:devmessias@gmail.com">devmessias@gmail.com</a>
+        </p>
+        <ul class="list-inline banner-social-buttons">
+          <li>
+            <a href="https://www.facebook.com/" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+          </li>
+          <li>
+            <a href="https://github.com/BrasilLivre" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section id="contribua" class="container content-section text-center">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+        <h2>Contribua para o projeto!</h2>
+        <p>Estamos a procura de pessoas interessadas em auxiliar no combate a exploração de mão de obra.
+          <small> Independente de sua formação ou área de conhecimento você terá uma funcionalidade. Buscamos designers, advogados, programadores ou
                 pessoas que saibam fazer café</small>
-                </p>
-                <p><a href="mailto:devmessias@gmail.com">devmessias@gmail.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://www.facebook.com/" class="btn btn-default btn-lg">
-                            <i class="fa fa-facebook fa-fw"></i> <span class="network-name">
-                                Design</span></a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/" class="btn btn-default btn-lg">
-                            <i class="fa fa-facebook fa-fw"></i> <span class="network-name">
-                                Humanas</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/BrasilLivre" class="btn btn-default btn-lg">
-                            <i class="fa fa-github fa-fw"></i> <span class="network-name">
+        </p>
+        <p>
+          Mande um email para
+          <a href="mailto:devmessias@gmail.com">devmessias@gmail.com</a>
+        </p>
+        <p>
+          <ul class="list-inline banner-social-buttons">
+
+            <li>
+              <a href="https://www.facebook.com/" class="btn btn-default btn-lg">
+                <i class="fa fa-facebook fa-fw"></i> <span class="network-name">
+                                Ou entre em contato via facebook</span></a>
+            </li>
+            <li>
+              <a href="https://github.com/BrasilLivre" class="btn btn-default btn-lg">
+                <i class="fa fa-github fa-fw"></i> <span class="network-name">
                                 Sou um desenvolvedor!
                                 </span></a>
-                    </li>
-                    
-                </ul>
-            </div>
-        </div>
-    </section>
-    <!-- Map Section -->
-    <div id="map"></div>
+            </li>
 
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Your Website 2016</p>
-        </div>
-    </footer>
+          </ul>
+      </div>
+    </div>
+  </section>
+  <!-- Map Section -->
+  <div id="map"></div>
 
-    <!-- jQuery -->
-    <script src="vendor/jquery/jquery.js"></script>
+  <!-- Footer -->
+  <footer>
+    <div class="container text-center">
+      <p>Copyright &copy; Your Website 2016</p>
+    </div>
+  </footer>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+  <!-- jQuery -->
+  <script src="vendor/jquery/jquery.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+  <!-- Bootstrap Core JavaScript -->
+  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+  <!-- Plugin JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
-    <!-- Theme JavaScript -->
-    <script src="js/grayscale.min.js"></script>
+  <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+
+  <!-- Theme JavaScript -->
+  <script src="js/grayscale.min.js"></script>
 
 </body>
 
