--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
            Considera-se trabalho realizado em condição análoga à de escravo a que resulte das seguintes situações, quer em conjunto, quer isoladamente: a submissão de trabalhador a trabalhos forçados; a submissão de trabalhador a
           jornada exaustiva; a sujeição de trabalhador a condições degradantes de trabalho; a restrição da locomoção do trabalhador, seja em razão de dívida contraída, seja por meio do cerceamento do uso de qualquer meio de transporte por parte do trabalhador,
           ou por qualquer outro meio com o fim de retê-lo no local de trabalho; a vigilância ostensiva no local de trabalho por parte do empregador ou seu preposto, com o fim de retê-lo no local de trabalho; a posse de documentos ou objetos pessoais do
-          trabalhador, por parte do empregador ou seu preposto, com o fim de retê-lo no local de trabalho. Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on
-
+          trabalhador, por parte do empregador ou seu preposto, com o fim de retê-lo no local de trabalho.
+          
       </div>
     </div>
   </section>
