remove unecessary informations

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           jornada exaustiva; a sujeição de trabalhador a condições degradantes de trabalho; a restrição da locomoção do trabalhador, seja em razão de dívida contraída, seja por meio do cerceamento do uso de qualquer meio de transporte por parte do trabalhador,
           ou por qualquer outro meio com o fim de retê-lo no local de trabalho; a vigilância ostensiva no local de trabalho por parte do empregador ou seu preposto, com o fim de retê-lo no local de trabalho; a posse de documentos ou objetos pessoais do
           trabalhador, por parte do empregador ou seu preposto, com o fim de retê-lo no local de trabalho.
-          
+
       </div>
     </div>
   </section>
@@ -173,12 +173,12 @@
     </div>
   </section>
   <!-- Map Section -->
-  <div id="map"></div>
+  <!--<div id="map"></div>-->
 
   <!-- Footer -->
   <footer>
     <div class="container text-center">
-      <p>Copyright &copy; Your Website 2016</p>
+    <!--  <p>Projeto apoiado pela comunidade  &copy; Python & Software Livre do triângulo</p>-->
     </div>
   </footer>
 
