--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="Bruno Messias">
+  <meta name="description" content="Big Data, Bot's, trabalho escravo, exploração">
+  <!--FACEBOOK META TAG-->
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:title" content="Brasil Livre - Lutando contra a exploração de mão de obra">
+  <meta property="og:site_name" content="Brasil Livre">
+  <meta property="og:description" content="Brasil Livre - Lutando contra a exploração de mão de obra">
+
+  <meta property="og:image" content="img/faceShare.png">
+  <meta property="og:image:type" content="image/png">
+
+
 
   <title>Brasil Livre</title>
 
