Pequenas alterações no design

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 
   <!-- Theme CSS -->
   <link href="css/grayscale.min.css" rel="stylesheet">
+  <link href="css/custom.css" rel="stylesheet">
+
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -88,7 +90,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h1 class="brand-heading">Brasil Livre</h1>
-            <p class="intro-text">Lutando contra o trabalho escravo contemporâneo
+            <p class="intro-text">Lutando contra o a exploração de mão de obra no Brasil
               <br>Comunidade de Software Livre UFU.</p>
             <a href="#about" class="btn btn-circle page-scroll">
               <i class="fa fa-angle-double-down animated"></i>
@@ -121,16 +123,31 @@
     <div class="download-section">
       <div class="container">
         <div class="col-lg-8 col-lg-offset-2">
-          <h2>Ferramentas</h2>
+          <h2>Mapa do Trabalho Escravo</h2>
           <p>.....</p>
-          <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg">Mapa do Trabalho Escravo</a>
-          <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg">Bot de Auxílio</a>
+          <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg full">Veja</a>
+          <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg full">Contribua</a>
 
         </div>
+
       </div>
     </div>
   </section>
+  <section id=" " class="content-section text-center">
+    <div class="">
+      <div class="container">
+        <div class="col-lg-8 col-lg-offset-2">
+          <h2>Chat Bot de Auxílio</h2>
+          <p>
+O objetivo dessa ferramenta é permitir que cidadões tenham consigam se comunicar com um Robô
+          </p>
+          <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg">Bot de Auxílio</a>
 
+        </div>
+
+      </div>
+    </div>
+  </section>
   <!-- Contact Section -->
   <section id="contact" class="container content-section text-center">
     <div class="row">
