--- a/index.html
+++ b/index.html
@@ -117,7 +117,27 @@
       </div>
     </div>
   </section>
+  <section id="ferramentas" class="content-section text-center">
+    <div class="">
+      <div class="container">
+        <div class="col-lg-8 col-lg-offset-2">
+          <img src='img/ibm_watson.png'/>
+          <h2>Chat Bot</h2>
+          <p>
+            O objetivo dessa ferramneta é confecionar um advogado robô que seja capaz de se comunicar com as pessoas através
+            canais como Messenger ou SMS, permitindo que trabalhadores tenham um acesso facilitado a uma pré-acessoria jurídica,
+            permitindo que defensores, escritórios de advocacia  e ONG's consigam trabalhar de forma mais eficiente.
+            O Robô será responsável por interagir inicialmente com as pessoas, requisitar as informações necessárias,
+            caracterizar os pontos principais das demanadas dos trabalhadores e comunicar essas informações com
+            os orgãos ou pessoas responsáveis por atuar naquela região.
+          </p>
+          <a href="https://github.com/BrasilLivre/bot" class="btn btn-default btn-lg">Bot de Auxílio</a>
 
+        </div>
+
+      </div>
+    </div>
+  </section>
   <!-- Download Section -->
   <section id="ferramentas" class="content-section text-center">
     <div class="download-section">
@@ -125,29 +145,16 @@
         <div class="col-lg-8 col-lg-offset-2">
           <h2>Mapa do Trabalho Escravo</h2>
           <p>.....</p>
-          <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg full">Veja</a>
-          <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg full">Contribua</a>
+          <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg full">
+          Veja(dados ainda sendo tratados)</a>
+          <a href="https://github.com/BrasilLivre/brasillivre-mapa" class="btn btn-default btn-lg full">Contribua</a>
 
         </div>
 
       </div>
     </div>
   </section>
-  <section id=" " class="content-section text-center">
-    <div class="">
-      <div class="container">
-        <div class="col-lg-8 col-lg-offset-2">
-          <h2>Chat Bot de Auxílio</h2>
-          <p>
-O objetivo dessa ferramenta é permitir que cidadões tenham consigam se comunicar com um Robô
-          </p>
-          <a href="http://brasillivre.brunomessias.com" class="btn btn-default btn-lg">Bot de Auxílio</a>
 
-        </div>
-
-      </div>
-    </div>
-  </section>
   <!-- Contact Section -->
   <section id="contact" class="container content-section text-center">
     <div class="row">
